/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package exec.catalog;

option java_package = "com.dremio.exec.proto";
option java_outer_classname = "CatalogRPC";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;


/* Describes communication between catalogs. */
enum RpcType {
  ACK = 1;
  REQ_SOURCE_CONFIG = 2;
  REQ_DEL_SOURCE = 3;
}

message SourceWrapper {
  optional bytes bytes = 1;
}

